--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.1",
-    "@nuxt/eslint": "^0.7.4"
+    "@nuxt/eslint": "^0.7.4",
+    "@unocss/nuxt": "^0.65.3",
+    "@unocss/reset": "^0.65.3"
   }
 }
