--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,14 @@
+// https://nuxt.com/docs/guide/concepts/typescript
+
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/shared/*"],
+      "app/*": ["./src/app/*"],
+      "entities/*": ["./src/entities/*"],
+      "widgets/*": ["./src/widgets/*"],
+      "features/*": ["./src/features/*"]
+    }
+  }
 }
