--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/types": "^2.18.1",
     "nuxt": "^3.15.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-tsc": "^2.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.1",
