--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@nuxt/types": "^2.18.1",
+    "@pinia/nuxt": "0.9.0",
     "nuxt": "^3.15.0",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest",
     "vue-tsc": "^2.2.0"
